# endpoint-selection-example

./: README.md  full_criteria_descriptions.csv  main.py  pyproject.toml  requirements.txt  streamlit_app.py
assets/criteria/: ctti_default_criteria.json
assets/pdf/: cover_markdown.md  sections_order.json
assets/pdf/fonts/: README.md
assets/tokens/: ctti.tokens.json
src/: __init__.py  app.py
src/config/: app_config.yaml
src/domain/: __init__.py  errors.py  models.py  policies.py
src/infra/: __init__.py
src/infra/pdf/: __init__.py  pdf_builder.py
src/infra/repositories/: __init__.py  json_repository.py  repository.py  sqlite_repository.py
src/infra/storage/: __init__.py  file_store.py  paths.py
src/services/: analysis_service.py  audit_service.py  export_service.py  scenario_service.py  scoring_service.py  weights_service.py
src/ui/: __init__.py
src/ui/components/: banners.py  charts.py  edit_score_modal.py  edit_weight_modal.py  nav_header.py  progress_meter.py  tables.py  unified_scoring_table.py
src/ui/pages/: finalize_export.py  review_analysis.py  setup.py  unified_scoring.py
src/ui/theme/: __init__.py  tokens_loader.py
src/utils/: __init__.py  criteria_loader.py
