[project]
name = "cweb-test"
version = "0.1.0"
description = "CTTI Endpoint Selection Facilitator App - Desktop Streamlit app for consensus scoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit==1.39.0",
    "pydantic==2.9.2",
    "altair==5.3.0",
    "pymupdf==1.24.10",
    "jinja2==3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov>=4.1.0",
    "black==23.12.1",
    "ruff==0.6.8",
    "isort==5.13.2",
    "pre-commit>=3.0.0",
]

[project.scripts]
ctti-app = "main:main"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
